--- a/vignettes/Walk-through.Rmd
+++ b/vignettes/Walk-through.Rmd
@@ -27,9 +27,7 @@ devtools::install_github("sirpudika/irpanels")
 
 ```{r setup}
 library(irpanels)
-library(dplyr)
-library(ggplot2)
-library(haven)
+library(tidyverse)
 ```
 
 Currently, `irpanels` offers the following functions:
@@ -38,13 +36,16 @@ Currently, `irpanels` offers the following functions:
 ls("package:irpanels")
 ```
 
-The prefixes indicate the step in the workflow. The functions beginning with `cb` simplify creating the codebook. The `eda` functions are for exploratory data analysis. The functions starting with `plot`, in turn, help to visualise the data. Finally, there are some additional helper functions.
+The prefixes indicate the step in the workflow. The functions beginning with `cb` simplify creating the codebook. The `eda` functions are for exploratory data analysis. The functions starting with `plot`, in turn, help to visualize the data. Finally, there are some additional helper functions.
 
-FYI: The dataset used here is not publicly accessible for data protection reasons. However, it can be requested [here](https://istp.ethz.ch/research/sep.html).
+FYI: The datasets used here are not publicly accessible for data protection reasons. However, they can be requested [here](https://istp.ethz.ch/research/sep.html).
 
 ```{r}
 load("upanel_w5.RData")
+load("upanel_w8.RData")
 ```
+
+## Frequency Tables
 
 Very often we need to know the relative frequencies of the responses to a survey item. `eda_freqtable` helps to get these numbers quickly. By default, the logical operator is `rm.dk = FALSE`, i.e. the relative proportion of "Don't know" responses is included.
 
@@ -62,7 +63,9 @@ eda_crosstable(w5, items = c("w5_q2", "w5_q11"), rm.dk = TRUE)
 
 ## Visualizations
 
-Four plot functions are currently available: `plot_bar_v`, `plot_bar_h`, `plot_groupbar_v`, `plot_groupbar_h.` As the respective names imply, the first two functions are used to visualise one variable, while the last two allow visualisation with a grouping variable.
+Six plot functions are currently available: `plot_bar_v`, `plot_bar_h`, `plot_groupbar_v`, `plot_groupbar_h`, `plot_multiple_h` and `plot_rank_v`. As the respective names imply, the first two functions are used to visualize one variable; the second two allow visualization with a grouping variable; the fifth function plots multiple subitems from the same question (optionally by grouping and/or treatment variables); and the last function visualizes rankings (optionally by grouping and/or treatment variables). All functions are available in German (default) or in English (set `lang = "EN"`).
+
+### *plot_bar_v* / *plot_bar_h*
 
 In their simplest forms, `plot_bar_v` and `plot_bar_h` plot the relative frequency of the item in a vertical and horizontal plot, respectively. The values of the items are not yet labelled and the proportion "Don't know" responses must also be specified.
 
@@ -77,20 +80,83 @@ plot_bar_h(w5, item = w5_q11) +
     scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
 ```
 
-Before moving on to the visualisations of grouped variables, it's worth highlighting the helper function `sep_palette". This function allows users to choose from a range of official ETH colour palettes. Available are the following palettes:
+### *plot_groupbar_v* / *plot_groupbar_h*
 
-`"Standard", "Darkblues", "Greens", "Lightblues", "Lightgreens", "Pinks"`
+Before moving on to the visualizations of grouped variables, it's worth highlighting the helper function `sep_palette"`. This function allows users to choose from a range of official ETH colour palettes. Available are the following palettes:
+
+`"Standard", "Darkblues", "Greens", "Lightblues", "Lightgreens", "Pinks", "BluePink"`
 
 You can select the palette of your choice by either saving it as an object or directly calling it in the plot function.
 
 ```{r}
-plot_groupbar_v(w5, item = w5_q11, by = w5_q2, labels = c("Female", "Male"), values = sep_palette("Standard")) +
+plot_groupbar_v(w5, item = w5_q11, by = w5_q2, lang = "EN",
+                labels = c("Female", "Male"), values = sep_palette("Standard")) +
  scale_x_discrete(labels = c("Item One", "Item Two", "Item Three", "Item Four", "Item Five"))
 ```
 
 **Again, note that with the horizontal plots, you have to change reverse the order of the manual labels to display them correctly!**
 
 ```{r}
-plot_groupbar_h(w5, item = w5_q11, by = w5_q2, labels = c("Female", "Male"), values = sep_palette("Darkblues")) +
+plot_groupbar_h(w5, item = w5_q11, by = w5_q2, 
+                labels = c("Female", "Male"), values = sep_palette("Darkblues")) +
  scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
 ```
+
+### *plot_multiple_h*
+
+The plot function `plot_multiple_h` depicts several items from the same question in one plot. Unlike the previous plots, `plot_multiple_h` and `plot_rank_v` demand that you **define the item labels (`item_labels`) and the question text (`question`) beforehand.** The argument `item` takes as input a vector of variables.
+
+```{r}
+item_labels <- c("When shopping, I choose products\nwith an environmental label.", "I use fabric shopping bags\nseveral times (at least 20 times).", "I buy drugstore items and\ncleaning products in refill packs.", 
+                 "I watch films via streaming or\ndownload them from the internet\ninstead of buying the DVD.")
+question <- "In the following, we are concerned with your personal behaviour when buying and\nusing products and services. Please indicate how often you undertake these actions."
+
+plot_multiple_h(w8, item = paste0("w8_q6x", 1:4), barwidth = 0.5, lang = "EN",
+                values = sep_palettes$BluePink,
+                labels = c("Never", "Rarely", "Occasionally", "Often", "Always"))
+```
+
+The plot can also distinct by grouping variable and/or treatment variable. In order to achieve this, the argument `by` and/or `treat` must be defined.
+
+```{r fig.height=7}
+item_labels <- c("Ich wähle beim Einkaufen Produkte\nmit Umweltdeklaration.", "Ich verwende Einkaufstüten oder -taschen\naus Stoff mehrfach (min. 20 Mal).", 
+                 "Ich kaufe Drogerie-Artikel und Putzmittel\nin Nachfüllpackungen.", "Ich schaue Filme im Streaming oder lade sie aus\ndem Internet herunter, anstatt die DVD zu kaufen.")
+question <- "Im Folgenden geht es um Ihr persönliches Verhalten bei Kauf und Nutzung\nvon Produkten und Dienstleistungen. Bitte geben Sie an, wie häufig Sie diese Handlungen ausführen."
+
+plot_multiple_h(w8, item = paste0("w8_q6x", 1:4), by = rurality,
+                values = sep_palettes$BluePink,
+                labels = c("Nie", "Selten", "Gelegentlich", "Oft", "Sehr Oft")) +
+  theme(axis.text.y = element_text(lineheight = 0.8)) #decrease spacing between item label lines
+```
+
+Moreover, arguments determining barwidth, size of percentage text as well as percentage and legend positions can be specified. When grouping by grouping or treatment variable, the argument `ncol.wrap` furthermore allows to specify how many columns the facets should be organised in (above and default: 1).
+
+### *plot_rank_v*
+
+As the name implies, this plot functions visualizes rankings. **Again, `item_labels` and `question` must be specified beforehand.** The argument `n.items` sets the number of items per rank. By default, all items are shown. If the argument is set to fewer items (example below: 4 items), the most prominent items for each rank are visualized.
+
+```{r}
+item_labels <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
+                 "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
+question <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
+
+plot_rank_v(w8, item = paste0("w8_q16ax", 1:3), n.items = 4,
+            values = sep_palette("Standard"))
+```
+
+Beyond `n.items`, the same arguments can be set for this plot function as for `plot_multiple_h`. It can also distinct by grouping and/or treatment variable.
+
+```{r}
+item_labels <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
+                 "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
+question <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
+
+plot_rank_v(w8, item = paste0("w8_q16ax", 1:3), textsize = 7,
+            by = gender, treat = w8_treat_repair,
+            values = c(sep_palettes$Lightblues[1:4], rev(sep_palettes$Greens[1:3]))) +
+  theme(panel.spacing.y = unit(0.3, "cm")) #increase space between facet rows
+```
+
+
+
+
