--- a/vignettes/Walk-through.Rmd
+++ b/vignettes/Walk-through.Rmd
@@ -28,6 +28,7 @@ devtools::install_github("sirpudika/irpanels")
 ```{r setup}
 library(irpanels)
 library(tidyverse)
+library(pollster) #for the weights
 ```
 
 Currently, `irpanels` offers the following functions:
@@ -39,6 +40,30 @@ ls("package:irpanels")
 The prefixes indicate the step in the workflow. The functions beginning with `cb` simplify creating the codebook. The `eda` functions are for exploratory data analysis. The functions starting with `plot`, in turn, help to visualize the data. Finally, there are some additional helper functions.
 
 FYI: The datasets used here are not publicly accessible for data protection reasons. However, they can be requested [here](https://istp.ethz.ch/research/sep.html).
+
+```{r eval=FALSE, include=FALSE}
+w8 <- read_dta("S:/data/W8/final_data/upanel_w8.dta") %>%
+  as.data.frame() %>% 
+  zap_labels %>% 
+  mutate(gender = factor(df$w8_q2, levels = 1:2, labels = c("Frau", "Mann")),
+         rurality = as.character(w8_rurality),
+         rurality = factor(case_when(
+           rurality %in% 1:3 ~ "Rural",
+           rurality %in% 4:7 ~ "Intermediär",
+           rurality %in% 8:9 ~ "Urban",
+           TRUE ~ rurality),
+           levels = c("Rural", "Intermediär", "Urban")),
+         w8_treat_repair = factor(w8_treat_repair, levels = 1:4, 
+                                  labels = c("Smartphone", "Staubsauger","Waschmaschine", "Kleidung"))) %>% 
+  dplyr::select(paste0("w8_q6x", 1:4), paste0("w8_q16ax", 1:3), gender, rurality, w8_treat_repair)
+
+w5 <- haven::read_dta("S:/data/W5/final_data/upanel_w5.dta") %>% 
+  as.data.frame() %>% 
+  dplyr::select(w5_q27, w5_q2, w5_q11) %>% 
+  mutate(across(everything(), as.numeric))
+
+save(w8, file = "upanel_w8.RData"); save(w5, file = "upanel_w5.RData")
+```
 
 ```{r}
 load("upanel_w5.RData")
@@ -79,6 +104,17 @@ There is a corresponding argument in the function for the share of "Don't know" 
 plot_bar_h(w5, item = w5_q11) +
     scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
 ```
+
+All functions are also available with **survey weights**. In order to apply these, you need to specify the relevant columns the optional argument `weights`. By default, no weights are used.
+
+```{r}
+# I will invent survey weights here, these are meaningless
+w5$weights <- sample((1:18)/100, size = nrow(w5), replace = TRUE)
+
+plot_bar_h(w5, item = w5_q11, weights = weights) +
+    scale_x_discrete(labels = rev(c("Item One", "Item Two", "Item Three", "Item Four", "Item Five")))
+```
+
 
 ### *plot_groupbar_v* / *plot_groupbar_h*
 
@@ -165,6 +201,20 @@ plot_rank_v(w8, item = paste0("w8_q16ax", 1:3), textsize = 7,
   theme(panel.spacing.y = unit(0.3, "cm")) #increase space between facet rows
 ```
 
+Again, as with all functions, `weights` can also be specified.
+
+```{r}
+# I will invent survey weights here, these are meaningless
+w8$weights <- sample((1:18)/100, size = nrow(w8), replace = TRUE)
+
+# Here goes the same stuff as above
+item_labels <- c("Preis", "Qualität", "Technische Neuheit", "Aussehen", "Leistung", 
+                 "Energieeffizienz", "Umweltbelastung\nbei Herstellung")
+question <- "Es gibt unterschiedliche Gründe, sich für {[ein Smartphone] // [einen Staubsauger] //\n[eine Waschmaschine]} zu entscheiden. Wie wichtig oder unwichtig sind für Sie persönlich die\nfolgenden Gründe beim Kauf {[eines Smartphones] // [eines Staubsaugers] // [einer Waschmaschine]}?"
+
+plot_rank_v(w8, item = paste0("w8_q16ax", 1:3), n.items = 4, weights = weights,
+            values = sep_palette("Standard"))
+```
 
 
 
